# beartype-annotations

./: README.md  pyproject.toml  test_foo.py
