[tool.poetry]
name = "beartype-annotations"
version = "0.1.0"
description = ""
authors = ["Derek Wan <d.wan@icloud.com>"]

[tool.poetry.dependencies]
python = "^3.9"
beartype = "^0.9.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
